; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/pci/ddbridge/extr_ddbridge-max.c_lnb_set_sat.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/pci/ddbridge/extr_ddbridge-max.c_lnb_set_sat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_diseqc_master_cmd = type { i32*, i32 }
%struct.ddb = type { i32 }

@__const.lnb_set_sat.cmd = private unnamed_addr constant %struct.dvb_diseqc_master_cmd { i32* inttoptr (i64 224 to i32*), i32 4 }, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ddb*, i32, i32, i32, i32, i32)* @lnb_set_sat to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lnb_set_sat(%struct.ddb* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca %struct.ddb*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.dvb_diseqc_master_cmd, align 8
  store %struct.ddb* %0, %struct.ddb** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %14 = bitcast %struct.dvb_diseqc_master_cmd* %13 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %14, i8* align 8 bitcast (%struct.dvb_diseqc_master_cmd* @__const.lnb_set_sat.cmd to i8*), i64 16, i1 false)
  %15 = load i32, i32* %10, align 4
  %16 = shl i32 %15, 2
  %17 = and i32 %16, 12
  %18 = load i32, i32* %11, align 4
  %19 = icmp ne i32 %18, 0
  %20 = zext i1 %19 to i64
  %21 = select i1 %19, i32 1, i32 0
  %22 = or i32 %17, %21
  %23 = load i32, i32* %12, align 4
  %24 = icmp ne i32 %23, 0
  %25 = zext i1 %24 to i64
  %26 = select i1 %24, i32 2, i32 0
  %27 = or i32 %22, %26
  %28 = or i32 240, %27
  %29 = getelementptr inbounds %struct.dvb_diseqc_master_cmd, %struct.dvb_diseqc_master_cmd* %13, i32 0, i32 0
  %30 = load i32*, i32** %29, align 8
  %31 = getelementptr inbounds i32, i32* %30, i64 3
  store i32 %28, i32* %31, align 4
  %32 = load %struct.ddb*, %struct.ddb** %7, align 8
  %33 = load i32, i32* %8, align 4
  %34 = load i32, i32* %9, align 4
  %35 = call i32 @lnb_send_diseqc(%struct.ddb* %32, i32 %33, i32 %34, %struct.dvb_diseqc_master_cmd* %13)
  ret i32 %35
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @lnb_send_diseqc(%struct.ddb*, i32, i32, %struct.dvb_diseqc_master_cmd*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
